@@ -11,6 +11,7 @@ import it.polimi.ingsw.model.Exceptions.PlaceNotAvailableException;
 import it.polimi.ingsw.model.Exceptions.RequirementsNotMetException;
 import it.polimi.ingsw.model.GameCard;
 import it.polimi.ingsw.model.Player;
+import it.polimi.ingsw.model.UsefulData;
 import it.polimi.ingsw.model.chat.Message;
 import it.polimi.ingsw.model.enumeration.PlayerState;
 import it.polimi.ingsw.model.strategyPatternObjective.ObjectiveCard;
@@ -31,7 +32,9 @@ import javafx.scene.layout.BorderPane;
 import javafx.scene.layout.HBox;
 import javafx.scene.layout.VBox;
 import javafx.stage.Stage;
+import org.w3c.dom.Text;
 
+import javax.sound.midi.Receiver;
 import java.awt.*;
 import java.io.IOException;
 import java.util.List;
@@ -64,7 +67,7 @@ public class GameController implements FXMLController {
     public Button sendGlobalChatButton;
     private GameBoard gameBoard;
 
-    public void initialize() {
+    public void initialize() throws IOException, InterruptedException {
         popUp.setVisible(false);
         gameDesk = new GameDesk();
         gameDeskContainer.getChildren().add(gameDesk);
@@ -133,9 +136,9 @@ public class GameController implements FXMLController {
     public void initializeGame() {
         try {
             String username = client.getUsername();
-            ArrayList<Player> players = client.getPlayers(client.getIdGame());
-            playerDeskTabPane.setTabClosingPolicy(TabPane.TabClosingPolicy.UNAVAILABLE);
-            for (int i = playerDeskTabPane.getTabs().size()-1; i >=0; i--) {
+            List<Player> players = client.getPlayers(client.getIdGame());
+
+            for (int i = 0; i < playerDeskTabPane.getTabs().size(); i++) {
                 Tab tab = playerDeskTabPane.getTabs().get(i);
                 if (i < players.size()) {
                     tab.setDisable(false);
@@ -168,7 +171,7 @@ public class GameController implements FXMLController {
                 infoGame.setText("It's your turn: you should play a card");
                 showAvailablePositions();
             } else
-                infoGame.setText(client.getPlayers(client.getIdGame()).get(0).getUsername() + " is playing");
+                infoGame.setText(client.getPlayers(client.getIdGame()).getFirst().getUsername() + " is playing");
             initialiseChat();
         } catch (IOException | InterruptedException e) {
             throw new RuntimeException(e);
@@ -522,7 +525,7 @@ public class GameController implements FXMLController {
 
     }
 
-    public void initialiseSingleChatTab(String username, ArrayList<Message> alreadyExistingMessages) {
+    public void initialiseSingleChatTab(String username, ArrayList<Message> alreadyExistingMessages) throws IOException, InterruptedException {
         ChatTab newTab = new ChatTab(username);
 
         TextArea textArea = new TextArea();
@@ -590,7 +593,8 @@ public class GameController implements FXMLController {
             whoSendTheMessage = message.getSender();
         else
             return;
-        //I've already handled the message the client send, no need to use this function to display that message
+        System.out.println("cafdfsff");
+        //i've already handled the message the client send, no need to use this function to display that message
         for (Tab tab : chatGameTabPane.getTabs()) {
             if(message.getReceiver() == null && tab.getText().equals("GlobalChat")) {
                 VBox vbox = (VBox) ((AnchorPane) tab.getContent()).getChildren().get(0);
